# voice_agent_demo

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  bot.py  google-sheets.js  heroku-ssl-setup.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  tools.py
.history/: .env_20250515113221  README_20250510014653.md  config_20250510013914.js  config_20250515165826.js  config_20250515165837.js  google-sheets_20250515104523.js  package_20250510014528.json  package_20250510014611.json  package_20250515104707.json  package_20250515170409.json  server_20250509234509.js  server_20250510014435.js  server_20250515104531.js  server_20250515171315.js  server_20250515212122.js  server_20250515212641.js  server_20250515213243.js  server_20250515215329.js  sync-config_20250510014514.js  sync-config_20250510014808.js
.history/client/: .env_20250515110502
.history/client/public/: index_20250515163737.html  index_20250515163953.html  index_20250515164138.html  manifest_20250515163749.json
.history/client/src/: App_20250506194717.js  App_20250509225700.js  App_20250509225715.js  App_20250509231105.js  App_20250509231142.js  App_20250509231250.js  App_20250509231329.js  App_20250509232240.js  App_20250509234513.js  App_20250509234745.js  App_20250510012737.js  App_20250510013245.js  App_20250510015743.js  (+27 more)
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.test.js  OrderHistory.js  config.js  craco.config.js  index.js  setupTests.js
src/: App.js  index.js
tokenserver/: __main__.py  app.py
